# else-wer-librarian

./: .gitignore  Cargo.toml
librarian-cli/: Cargo.toml
librarian-cli/src/: cli.rs  file_scan.rs  main.rs  models.rs
librarian-core/: Cargo.toml
librarian-openlibrary/: Cargo.toml  commands.md
librarian-openlibrary/migrations/: 000_reset.sql  20250818202740_init.down.sql  20250818202740_init.up.sql  20250819084325_author_trigger.down.sql  20250819084325_author_trigger.up.sql  20250819090746_edition_author_trigger.down.sql  20250819090746_edition_author_trigger.up.sql
librarian-openlibrary/src/: db.rs  main.rs  models.rs
librarian-server/: Cargo.toml
