[package]
name = "librarian-openlibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
anyhow = "1.0.99"
serde_json = "1.0.142"
serde = { version ="1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = {version = "0.7.15", features = ["io"]}
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "runtime-tokio-native-tls"] }
walkdir = "2.5.0"
